--- a/httpdrs-core/Cargo.toml
+++ b/httpdrs-core/Cargo.toml
@@ -8,5 +8,9 @@ name = "httpdrs_core"
 path = "src/lib.rs"
 
 [dependencies]
+tokio = { workspace = true }
+reqwest = { workspace = true }
+
+# logger dependencies
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
