--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,13 @@ members = ["httpdrs",
 tokio = { version = "1.48.0", features = ["full"] }
 reqwest = { version = "0.12.24", features = ["stream", "json"] }
 
+# task dependencies
+futures = "0.3.31"
+
+# csv dependencies
+# polars = { version = "0.51.0", features = ["csv"] }
+csv = "1.4.0"
+
 # logger dependencies
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
