--- a/httpdrs-core/Cargo.toml
+++ b/httpdrs-core/Cargo.toml
@@ -11,6 +11,11 @@ path = "src/lib.rs"
 tokio = { workspace = true }
 reqwest = { workspace = true }
 
+# task dependencies
+futures = { workspace = true }
+
 # logger dependencies
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
+
+# csv dependencies
+csv = { workspace = true }
