--- a/httpdrs/Cargo.toml
+++ b/httpdrs/Cargo.toml
@@ -8,8 +8,10 @@ name = "httpdrs"
 path = "src/lib.rs"
 
 [dependencies]
+
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 
 httpdrs-logger = { version = "0.1.0",  path = "../httpdrs-logger" }
 httpdrs-core = { version = "0.1.0",  path = "../httpdrs-core" }
+httpdrs-sign = { version = "0.1.0",  path = "../httpdrs-sign" }
