--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,10 @@ members = [
 tokio = { version = "1.48.0", features = ["full"] }
 reqwest = { version = "0.12.24", features = ["stream", "json"] }
 
+
+# serialization dependencies
+serde_json = "1.0.145"
+
 # task dependencies
 futures = "0.3.31"
 
