--- a/httpdrs-core/Cargo.toml
+++ b/httpdrs-core/Cargo.toml
@@ -19,3 +19,5 @@ tracing = { workspace = true }
 
 # csv dependencies
 csv = { workspace = true }
+
+httpdrs-sign = { version = "0.1.0",  path = "../httpdrs-sign" }
