--- a/httpdrs-sign/Cargo.toml
+++ b/httpdrs-sign/Cargo.toml
@@ -16,3 +16,5 @@ tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { version = "1.0.228", features = ["derive"] }
+jwt = "0.16.0"
+base64 = "0.22.1"
