--- a/httpdrs-sign/Cargo.toml
+++ b/httpdrs-sign/Cargo.toml
@@ -15,6 +15,11 @@ tokio = { workspace = true }
 # logger dependencies
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+
 jwt = "0.16.0"
 base64 = "0.22.1"
+rmp-serde = "1.1"
+
