--- a/httpdrs-logger/Cargo.toml
+++ b/httpdrs-logger/Cargo.toml
@@ -10,3 +10,4 @@ path = "src/lib.rs"
 [dependencies]
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+tracing-appender = { workspace = true }
