--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ members = [
     "httpdrs",
     "httpdrs-bandwidth",
     "httpdrs-core",
-    "httpdrs-logger",
+    "httpdrs-logger", "httpdrs-pbar",
     "httpdrs-sign",
 ]
 
@@ -45,3 +45,7 @@ csv = "1.4.0"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
 tracing-appender = "0.2.3"
+
+# pbar dependencies
+indicatif = "0.18.2"
+
