--- a/httpdrs/Cargo.toml
+++ b/httpdrs/Cargo.toml
@@ -23,3 +23,4 @@ tracing-subscriber = { workspace = true }
 
 httpdrs-logger = { version = "0.1.0",  path = "../httpdrs-logger" }
 httpdrs-core = { version = "0.1.0",  path = "../httpdrs-core" }
+tokio-util = "0.7.16"
