--- a/httpdrs/Cargo.toml
+++ b/httpdrs/Cargo.toml
@@ -24,3 +24,4 @@ tracing-subscriber = { workspace = true }
 httpdrs-logger = { version = "0.1.0",  path = "../httpdrs-logger" }
 httpdrs-core = { version = "0.1.0",  path = "../httpdrs-core" }
 tokio-util = "0.7.16"
+chrono = "0.4.42"
