--- a/httpdrs/Cargo.toml
+++ b/httpdrs/Cargo.toml
@@ -26,3 +26,4 @@ httpdrs-core = { version = "0.1.0",  path = "../httpdrs-core" }
 tokio-util = "0.7.16"
 chrono = "0.4.42"
 reqwest = "0.12.24"
+indicatif = "0.18.2"
