--- a/httpdrs-logger/Cargo.toml
+++ b/httpdrs-logger/Cargo.toml
@@ -9,5 +9,5 @@ path = "src/lib.rs"
 
 [dependencies]
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
+tracing-subscriber = { workspace = true, version = "0.3.20", features = ["env-filter"] }
 tracing-appender = { workspace = true }
