--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ csv = "1.4.0"
 
 # logger dependencies
 tracing = "0.1.41"
-tracing-subscriber = "0.3.20"
+tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
 tracing-appender = "0.2.3"
 
 # pbar dependencies
