--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ members = [
 [workspace.dependencies]
 # core dependencies
 tokio = { version = "1.48.0", features = ["full"] }
+tokio-util = "0.7.16"
 reqwest = { version = "0.12.24", features = ["stream", "json"] }
 
 # serialization dependencies
@@ -45,4 +46,6 @@ tracing-appender = "0.2.3"
 
 # pbar dependencies
 indicatif = "0.18.2"
+
+
 
