--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.9,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "baai-flagdataset-rs"
+name = "ihttpd"
 requires-python = ">=3.10,<3.14"
 classifiers = [
     "Programming Language :: Rust",
@@ -13,21 +13,19 @@ classifiers = [
 dynamic = ["version"]
 
 [project.scripts]
-ihttpd = "baai_flagdataset_rs.cmd.cmd_run:with_cmdargs"
+ihttpd = "ihttd.cmd.cmd_run:with_cmdargs"
 
 
 [tool.maturin]
+python-source = "python"
+module-name = "ihttpd._ihttpd"
 features = ["pyo3/extension-module"]
 
 # 配置maturin包含Python文件
 include = [
-    "python/baai_flagdataset/**/*.py",
+    "python/ihttpd/**/*.py",
     "README.md",
     "LICENSE",
     "**/*.pyi",
 ]
 
-# 包发现配置
-[tool.setuptools.packages.find]
-where = ["python"]
-include = ["baai_flagdataset*"]
